Add expression parsing module

--- a/lang/pom.xml
+++ b/lang/pom.xml
@@ -47,6 +47,7 @@
     <module>backend-tgg</module>
     <module>frontend</module>
     <module>model</module>
+    <module>expression-parser</module>
   </modules>
 
   <!-- Dependency Management -->
