--- a/lang/backend-tgg/operators/pom.xml
+++ b/lang/backend-tgg/operators/pom.xml
@@ -16,6 +16,11 @@
   <name>TGG Operators</name>
   <description />
 
-  <dependencies>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>tools.vitruv.neojoin.model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
