--- a/lang/expression-parser/pom.xml
+++ b/lang/expression-parser/pom.xml
@@ -44,6 +44,11 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.viatra</groupId>
+            <artifactId>org.eclipse.viatra.query.runtime.matchers</artifactId>
+            <version>${viatra.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.viatra</groupId>
             <artifactId>viatra-query-language</artifactId>
             <version>${viatra.version}</version>
         </dependency>
