--- a/lang/pom.xml
+++ b/lang/pom.xml
@@ -98,6 +98,12 @@
         <artifactId>assertj-core</artifactId>
         <version>3.27.3</version>
       </dependency>
+        <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.38</version>
+          <scope>provided</scope>
+        </dependency>
       <dependency>
         <groupId>org.eclipse.emf</groupId>
         <artifactId>org.eclipse.emf.common</artifactId>
