Add argument for TGG rule generation

--- a/lang/frontend/cli/pom.xml
+++ b/lang/frontend/cli/pom.xml
@@ -34,6 +34,11 @@
       <artifactId>tools.vitruv.neojoin.expression-parser</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>tools.vitruv.neojoin.tgg.driver</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>info.picocli</groupId>
