--- a/lang/expression-parser/parser/pom.xml
+++ b/lang/expression-parser/parser/pom.xml
@@ -5,18 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>tools.vitruv</groupId>
-        <artifactId>tools.vitruv.neojoin</artifactId>
+        <artifactId>tools.vitruv.neojoin.expression_parser</artifactId>
         <version>0.1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>tools.vitruv.neojoin.expression_parser</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>tools.vitruv.neojoin.expression_parser.parser</artifactId>
 
-    <name>Expression Parser</name>
-    <description/>
-
-    <modules>
-        <module>model</module>
-        <module>parser</module>
-    </modules>
+    <name>Expression Parser Logic</name>
+    <description />
 </project>
