--- a/lang/backend-tgg/operators/pom.xml
+++ b/lang/backend-tgg/operators/pom.xml
@@ -22,5 +22,15 @@
             <artifactId>tools.vitruv.neojoin.model</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>tools.vitruv.neojoin.expression_parser.model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>tools.vitruv.neojoin.expression_parser.parser</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
