--- a/lang/pom.xml
+++ b/lang/pom.xml
@@ -41,6 +41,7 @@
     <maven.compiler.target>21</maven.compiler.target>
     <sonar.organization>vitruv-tools</sonar.organization>
     <xtext.version>2.39.0</xtext.version>
+    <jte.version>3.2.1</jte.version>
   </properties>
 
   <!-- Modules -->
@@ -73,12 +74,12 @@
       <dependency>
         <groupId>gg.jte</groupId>
         <artifactId>jte</artifactId>
-        <version>3.2.1</version>
+          <version>${jte.version}</version>
       </dependency>
       <dependency>
         <groupId>gg.jte</groupId>
         <artifactId>jte-runtime</artifactId>
-        <version>3.2.1</version>
+        <version>${jte.version}</version>
       </dependency>
       <dependency>
         <groupId>info.picocli</groupId>
