--- a/lang/backend-tgg/emsl_utils/pom.xml
+++ b/lang/backend-tgg/emsl_utils/pom.xml
@@ -9,9 +9,9 @@
         <version>0.1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>tools.vitruv.neojoin.tgg.emsl_metamodel_generator</artifactId>
+    <artifactId>tools.vitruv.neojoin.tgg.emsl_utils</artifactId>
 
-    <name>eMSL Metamodel Generator</name>
+    <name>eMSL Utils</name>
     <description/>
 
     <dependencies>
@@ -37,7 +37,7 @@
                 <artifactId>jte-maven-plugin</artifactId>
                 <version>${jte.version}</version>
                 <configuration>
-                    <sourceDirectory>${project.basedir}/src/main/resources/tools/vitruv/neojoin/tgg/emsl_metamodel_generator/templates</sourceDirectory>
+                    <sourceDirectory>${project.basedir}/src/main/resources/tools/vitruv/neojoin/tgg/emsl_utils/templates</sourceDirectory>
                     <targetDirectory>${project.build.directory}/generated-sources/jte</targetDirectory>
                     <contentType>Plain</contentType>
                 </configuration>
