--- a/lang/expression-parser/parser/pom.xml
+++ b/lang/expression-parser/parser/pom.xml
@@ -32,5 +32,11 @@
             <artifactId>tools.vitruv.neojoin.expression_parser.model</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
