--- a/lang/backend-tgg/operators/pom.xml
+++ b/lang/backend-tgg/operators/pom.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>tools.vitruv</groupId>
-    <artifactId>tools.vitruv.neojoin.tgg</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
-  </parent>
+    <parent>
+        <groupId>tools.vitruv</groupId>
+        <artifactId>tools.vitruv.neojoin.tgg</artifactId>
+        <version>0.1.0-SNAPSHOT</version>
+    </parent>
 
-  <artifactId>tools.vitruv.neojoin.tgg.operators</artifactId>
+    <artifactId>tools.vitruv.neojoin.tgg.operators</artifactId>
 
-  <name>TGG Operators</name>
-  <description />
+    <name>TGG Operators</name>
+    <description/>
 
     <dependencies>
         <dependency>
@@ -31,6 +31,10 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>tools.vitruv.neojoin.expression_parser.parser</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 </project>
