Add parser for eMSL files, use dependencies from eMoflone p2 repository

--- a/lang/pom.xml
+++ b/lang/pom.xml
@@ -51,6 +51,8 @@
     <module>frontend</module>
     <module>model</module>
     <module>expression-parser</module>
+    <module>p2wrappers</module>
+    <module>emsl-parser</module>
   </modules>
 
   <!-- Dependency Management -->
