--- a/lang/pom.xml
+++ b/lang/pom.xml
@@ -42,6 +42,7 @@
     <sonar.organization>vitruv-tools</sonar.organization>
     <xtext.version>2.40.0</xtext.version>
     <jte.version>3.2.1</jte.version>
+    <junit-jupiter.version>5.13.4</junit-jupiter.version>
   </properties>
 
   <!-- Modules -->
@@ -182,12 +183,12 @@
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
-        <version>6.0.1</version>
+        <version>${junit-jupiter.version}</version>
       </dependency>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-params</artifactId>
-        <version>6.0.1</version>
+        <version>${junit-jupiter.version}</version>
       </dependency>
       <dependency>
         <groupId>tools.vitruv</groupId>
